Update content on code page.

--- a/_static/default.css
+++ b/_static/default.css
@@ -76,6 +76,7 @@ a.toc-backref { color: black; }
 .document { margin-top: 30px; }
 .option-group { min-width: 20px; }
 .publish-date { text-align: center; font-style: italic; }
+.reference em { font-style: normal; }
 pre {
     margin-left: 1em;
     margin-right: 1em;
